--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
-    "react-scripts": "3.1.1"
+    "react-router": "^5.1.2",
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,7 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "redux": "^4.0.4"
-  }
+  "devDependencies": {}
 }
